fix scrollbars and holes - try fix favicon

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,7 @@ html {
     width: 100vw;
     min-height: 100vh;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 * {
